# mongo-cxx-docker-example

./: .gitignore  .travis.yml  CMakeLists.txt  build.sh  config.h.in  install-mongo-lib.sh
deploy/: Dockerfile  docker-compose.yml
src/: main.cpp
